# dio_fast_api_challenge

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 5b43f9a57773_create_users_table.py  665c6ac47a8b_create_transactions_table.py  e13fc19ff6b6_create_accounts_table.py
src/: main.py
src/api/: deps.py
src/api/routers/: __init__.py  accounts.py  auth.py  transactions.py  users.py
src/core/: config.py  database.py  security.py
src/models/: account.py  transaction.py  user.py
src/schemas/: account.py  auth.py  transaction.py  user.py
src/services/: account_service.py  auth_service.py  transaction_service.py  user_service.py
tests/: conftest.py
tests/integration/: test_accounts.py  test_auth.py  test_transactions.py  test_users.py
tests/unit/: test_account_service.py  test_auth_service.py  test_transaction_service.py  test_unit_service.py  test_user_service.py
